<resources>
    <string name="app_name">Hamsafar</string>
    <string name="buttonLogin">Вход в аккаунт</string>
    <string name="editEmail">Ваш email</string>
    <string name="editPass">Ваш пароль</string>
    <string name="editPassCreat">Придумайте пароль</string>
    <string name="editUserName">Ваше имя</string>
    <string name="creat_post">Новая запись</string>
    <string name="login_btn_text">Вход в аккаунт</string>
    <string name="user_pass">Ваш пароль</string>
    <string name="signing_in">Вход в аккаунт…</string>
    <string name="buttonRegister">Зарегистрироваться</string>
    <string name="textTeamOfServis">Нажимая <b>«Зарегистрироваться»,</b> Вы принимаете <b>настоящие условия</b> использования сервиса</string>
    <string name="textRegisterTitle">Создание аккаунта</string>
    <string name="textRegisterDiv">Зарегистрируйтесь чтобы создавать поездки</string>
    <string name="textAuthTitle">Вход в аккаунт</string>
    <string name="textLoginDiv">Войдите в аккаунт чтобы воспользоваться всеми возможностями сервиса</string>
    <string name="editPhoneUser">+992 | номер телефона</string>
    <string name="field_passMessage">Обязательное поле и не менее 6 символов</string>
    <string name="notFoundUserMessage">Ошибка входа в аккаунт, пользователь с таким email не найден</string>
    <string name="buttonRegisterCoun">Продолжить</string>
    <string name="field_emailInvalid">Вы ввели некорректный адрес электронной почты</string>
    <string name="field_nameRegister">Обязательное поле и не менее 3 символов</string>
    <string name="field_phoneRegister">Обязательное поле и не менее 7 символов без +992</string>
    <string name="erro_registerMessage">Пользователь с таким email уже существует</string>
    <string name="erro_registerMessageS">Ошибка регистрации нового пользователя, повторите попытку позже</string>
    <string name="spinner_CityMessage">Укажите ваш город</string>
    <string name="textEditRegister">Укажите ваше имя и других данных</string>
    <string name="textEditCreat">Укажите направление маршрута</string>
    <string name="textEditCreatTrip">Укажите дату и время маршрута</string>
    <string name="textEditCreatAn">Укажите цену, кол-во мест</string>
    <string name="buttonCreatTrip">Создать поездку</string>
    <string name="editDate">Дата</string>
    <string name="editTime">Время</string>
    <string name="editCarModel">Марка автомобиля</string>
    <string name="editPrice">Цена за пассажира</string>
    <string name="editSeat">Количество мест</string>
    <string name="editComments">Комментарии…</string>
    <string name="buttonTripCreat">Создать заявку</string>
    <string name="political">Добро пожаловать в мобильное приложение Hamsafar. Пожалуйста, внимательно прочитайте наше пользовательское соглашение, которое регулирует использование нашего приложения. При регистрации нажимая кнопку <b>Зарегистрироваться</b>, вы подтверждаете свое согласие с нашими условиями.\n\n
        <b>1. Общие условия\n</b>
        1.1. Мобильное приложение "Hamsafar" является сервисом, предназначенным для поиска попутчиков и организации совместных поездок.\n
        1.2. Использование приложения возможно только для пользователей старше 18 лет.\n
        1.3. Мы оставляем за собой право изменять условия пользовательского соглашения без предварительного уведомления пользователей.\n\n
        <b>2. Регистрация и использование аккаунта\n</b>
        2.1. Для использования приложения необходимо зарегистрироваться и создать аккаунт.\n
        2.2. При регистрации необходимо предоставить достоверную информацию о себе.\n
        2.3. Запрещается передавать свой аккаунт третьим лицам.\n\n
        <b>3. Поиск и организация поездок\n</b>
        3.1. Пользователи могут искать попутчиков для совместных поездок.\n
        3.2. Мы не несем ответственности за действия пользователей во время поездок.\n
        3.3. Пользователи обязаны соблюдать правила безопасности и соблюдать законодательство при организации и проведении поездок.\n
        <b>4. Ограничения использования приложения\n</b>
        4.1. Запрещается использование приложения для незаконных целей.\n
        4.2. Запрещается использование приложения для распространения спама или нежелательной рекламы.\n
        4.3. Мы оставляем за собой право блокировать аккаунты пользователей, нарушающих условия пользовательского соглашения.\n\n
        <b>Политика конфиденциальности\n</b>
        Мы ценим вашу конфиденциальность и обязуемся защищать личную информацию пользователей. Ниже представлена наша политика конфиденциальности.\n
        1. Сбор информации\n
        1.1. Мы собираем информацию, которую вы предоставляете при регистрации и использовании приложения.\n
        1.2. Мы также можем собирать информацию об устройствах, на которых вы используете наше приложение.\n
        2. Использование информации\n
        2.1. Мы используем информацию, которую мы собираем, для предоставления услуг и улучшения нашего приложения.\n
        2.2. Мы не раскрываем личную информацию пользователей третьим лицам без вашего согласия.\n\n
        <b>3. Безопасность\n</b>
        3.1. Мы принимаем меры для защиты личной информации пользователей от несанкционированного доступа и использования.\n
        3.2. Мы не несем ответственности за утечку личной информации пользователей, если это произошло по вине пользователя.\n
        Надеемся, что наше приложение будет полезным для вас и поможет вам найти попутчиков для совместных поездок. Если у вас есть какие-либо вопросы или предложения, пожалуйста, свяжитесь с нами по адресу <b>sarich97@icloud.com</b>\n\n\n\n\n\n
    </string>
    <string name="reating_descrip">Рейтинг - оценка качества услуг водителей, основанная на отзывах пассажиров. Чем выше рейтинг, тем выше посты в списке <b>актуальных поездок</b> и тем более вероятно, что водитель предоставляет отличный сервис.</string>
    <string name="trip_count_descrip">Количество завершенных поездок это показатель вашей активности, опыта и репутации в сообществе попутчиков. Больше завершенных поездок - больше доверия других пользователей.</string>
    <string name="start_trip_hint">Откуда</string>
    <string name="end_trip_hint">Куда</string>
    <string name="error_start_trip">Укажите начальную точку маршрута</string>
    <string name="error_end_trip">Укажите конечную точку маршрута</string>
    <string name="error_data_trip">Укажите дату</string>
    <string name="error_time_trip">Укажите время</string>
    <string name="error_price_trip">Укажите цену</string>
    <string name="error_seat_trip">Укажите количество мест</string>
    <string name="no_internet_connection">Нет подключения к интернету. Проверьте настройки соединения.</string>
    <string name="how_creatr_tripD">Для того, чтобы водитель создал поездку в приложении, нужно нажать на кнопку \"Новая заявка\" в разделе \"Я водитель\", указать место отправления и назначения, дату и время отправления, цену за проезд, количество доступных мест, возможность взять посылки и комментарии, а затем опубликовать поездку.</string>
    <string name="how_creatr_tripF">Для того, чтобы пассажир создал заявку в приложении, нужно нажать на кнопку \"Новая заявка\" в разделе \"Я пассажир\", указать место отправления и назначения, дату и время отправления, комментарии, а затем опубликовать поездку.</string>
    <string name="trip_count_descrip3">Для облегчения поиска попутчиков и сокращения количества неактуальных запросов мы ограничили количество активных поездок для каждого пользователя в приложении до трех. Это поможет вам быстрее найти подходящих попутчиков для конкретной поездки. Ограничение на количество активных поездок также помогает другим пользователям при поиске подходящих попутчиков, что повышает вероятность успешной организации поездки.</string>
    <string name="about_us">Hamsafar - это мобильное приложение, которое помогает найти попутчиков в Таджикистане для разных целей - от деловых поездок до прогулок по городам и районам страны. С его помощью можно легко находить единомышленников среди других пользователей Hamsafar, чтобы разделить расходы на поездку и сделать путешествие более экономичным.</string>
    <string name="how_delete">Чтобы удалить пассажира/водителя из своей заявки в приложении, откройте заявку и найдите список соответствующих заявок. Затем проведите пальцем вправо по имени нужного пассажира/водителя и нажмите "Удалить".</string>
    <string name="how_to_set_rating">После завершения поездки в приложении пассажирам отображается окно с возможностью оценить качество поездки. Окно содержит две кнопки: одна со смайликом, который выглядит довольным (позитивный отзыв), а другая - со смайликом, который выглядит грустным (негативный отзыв).

Пассажир может выбрать одну из этих кнопок, чтобы оставить общую оценку своего опыта поездки. Это быстрый и простой способ оценить качество обслуживания и оставить замечание, если что-то не понравилось. Оценка будет использоваться системой для подбора лучших водителей и повышения качества услуг, предоставляемых в приложении.</string>
    <string name="traffic_rules">ПДД, или Правила дорожного движения, являются основным набором правил и инструкций, которые регулируют поведение водителей и пешеходов на дорогах. Соблюдение ПДД очень важно для безопасности всех участников дорожного движения.
     дение ПДД помогает улучшить безопасность на дорогах и снизить количество аварий. Оно также способствует более гладкому и эффективному движению транспорта и уменьшению загрязнения окружающей среды.</string>
    <string name="traffic_rules1">Скорость - один из главных факторов, влияющих на безопасность дорожного движения. Необходимо ехать со скоростью, соответствующей условиям дороги и своим возможностям. Кроме того, необходимо поддерживать безопасную дистанцию до предыдущего автомобиля, чтобы иметь достаточное время на реакцию в случае необходимости.</string>
    <string name="traffic_rules2">Ремень безопасности - это один из наиболее важных элементов безопасности любого транспортного средства. Он предназначен для защиты водителя и пассажиров в случае дорожно-транспортного происшествия.
    Ремень безопасности помогает уменьшить риск получения серьезных травм при аварии, таких как переломы, ушибы, контузии и другие повреждения. Он также может спасти жизнь, предотвратив вылет пассажиров из машины во время столкновения.
    Использование ремня безопасности является законным требованием в большинстве стран мира, и не пристегнутый ремень может привести к штрафам и другим правовым последствиям.
    Никогда не следует игнорировать использование ремня безопасности, ведь его простое пристегивание может спасти жизни и предотвратить серьезные травмы при аварии.</string>
    <string name="traffic_rules3">Проведение технического обслуживания (ТО) автомобиля является очень важным аспектом безопасности на дороге. ТО позволяет проверить техническое состояние автомобиля и выявить возможные проблемы, которые могут быть опасными для водителя и других участников дорожного движения.
    В рамках ТО проводятся регулярные проверки и замена различных элементов автомобиля, таких как:\n
    \t・Масло и фильтры\n
    \t・Тормозные колодки и диски\n
    \t・Шины и давление в них\n
    \t・Амортизаторы\n
    \t・Система охлаждения\n
    \t・Двигатель и его компоненты\n\nРегулярное проведение ТО помогает избежать аварий, связанных с неисправностями автомобиля, таких как поломка тормозов или отказ двигателя. Кроме того, правильное техническое обслуживание может существенно снизить расходы на ремонт, так как мелкие проблемы будут выявлены и устранены на ранней стадии.</string>
</resources>