<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.fragments.RegisterFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/authTextTitle"
        android:text="@string/textRegisterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/authTextDiv"
        android:text="@string/textRegisterDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/user_Email"
        style="@style/editText"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:hint="@string/editEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/user_Pass"
        style="@style/editText"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:hint="@string/editPassCreat"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/user_Email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerNextBtn"
        style="@style/ButtonnStyle"
        android:text="@string/buttonRegisterCoun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_Pass" />


</androidx.constraintlayout.widget.ConstraintLayout>