<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@drawable/sheet_background">


    <EditText
        android:id="@+id/userEmailSingIn"
        style="@style/editText"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:hint="@string/editEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        tools:ignore="MissingConstraints"/>


    <EditText
        android:id="@+id/user_Name"
        style="@style/editText"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:hint="@string/editUserName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/userEmailSingIn"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/user_Phone"
        style="@style/editText"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:hint="@string/editPhoneUser"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_Name"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/singInButton"
        style="@style/buttonThemesGreen"
        android:backgroundTint="@color/colorPrimary"
        android:text="Редактировать"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_Phone" />

</androidx.constraintlayout.widget.ConstraintLayout>