<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragments.CreatPFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                style="@style/authTextDiv"
                android:text="@string/textEditCreat"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerStartTripP"
                style="@style/SpinnerTheme"
                android:layout_marginBottom="12dp"
                android:entries="@array/townList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/spinnerEndTripP"
                style="@style/SpinnerTheme"
                android:layout_marginBottom="12dp"
                android:entries="@array/townListEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerStartTripP"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView5"
                style="@style/authTextDiv"
                android:layout_marginTop="12dp"
                android:text="@string/textEditCreatTrip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerEndTripP" />

            <TextView
                android:id="@+id/editTextDateP"
                style="@style/editText"
                android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
                android:ems="10"
                android:padding="12dp"
                android:textSize="18dp"
                android:hint="@string/editDate"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/editTextTimeP"
                style="@style/editText"
                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                android:ems="10"
                android:padding="12dp"
                android:textSize="18dp"
                android:text="@string/editTime"
                android:textColor="@color/colorBold"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDateP" />

            <EditText
                android:id="@+id/editTextCommentP"
                style="@style/editText"
                android:drawableLeft="@drawable/baseline_insert_comment_24"
                android:ems="10"
                android:hint="@string/editComments"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTimeP" />

            <Button
                android:id="@+id/creatTripP"
                style="@style/ButtonnStyle"
                android:text="@string/buttonTripCreat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCommentP"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <ProgressBar
                android:id="@+id/progressBarPostP"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/creatTripP"
                app:layout_constraintStart_toStartOf="@+id/creatTripP"
                app:layout_constraintTop_toBottomOf="@+id/creatTripP" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>