<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbarTextBackBtn"
                style="@style/toolbarStyle"
                android:includeFontPadding="false"
                android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                android:maxLines="1"
                android:clickable="true"
                android:text="Редактировать профиль"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />





            <EditText
                android:id="@+id/userEmaiEdit"
                style="@style/editText"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:hint="@string/editEmail"
                android:importantForAutofill="no"
                android:focusable="false"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/toolbarTextBackBtn"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp" />


            <EditText
                android:id="@+id/userNameEdit"
                style="@style/editText"
                android:autofillHints=""
                android:focusable="false"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:hint="@string/editUserName"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/userEmaiEdit"
                tools:ignore="MissingConstraints"/>



            <EditText
                android:id="@+id/userPhoneEdit"
                style="@style/editText"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:hint="@string/editPhoneUser"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameEdit"
                tools:ignore="MissingConstraints" />


            <EditText
                android:id="@+id/userCarModelD"
                style="@style/editText"
                android:drawableLeft="@drawable/ic_baseline_directions_car_24"
                android:ems="10"
                android:hint="@string/editCarModel"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPhoneEdit" />


            <Button
                android:id="@+id/editInfoButton"
                style="@style/buttonThemesGreen"
                android:backgroundTint="@color/colorPrimary"
                android:text="Редактировать"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCarModelD" />


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/editInfoButton"
                app:layout_constraintStart_toStartOf="@+id/editInfoButton"
                app:layout_constraintTop_toTopOf="@+id/editInfoButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>